--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -15,12 +15,13 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.11",
-    "@types/node": "^16.18.0",
+    "@types/node": "^18.19.86",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "firebase": "^11.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "framer-motion": "^12.9.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
