--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -19,7 +19,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
-    "firebase": "^11.6.0",
+    "crypto-browserify": "^3.12.1",
     "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
@@ -38,6 +38,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
-    "vite": "^6.3.3"
+    "vite": "^5.0.0"
   }
 }
