--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -20,9 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
+    "mongodb": "^6.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.2",
