--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toast": "^1.2.11",
     "@types/node": "^18.19.86",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "crypto-browserify": "^3.12.1",
@@ -25,10 +26,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.17.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.2",
-    "tailwind-merge": "^1.14.0"
+    "stream-browserify": "^3.0.0",
+    "tailwind-merge": "^1.14.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
