--- a/learn-brightly/server/config.env
+++ b/learn-brightly/server/config.env
@@ -1,1 +1,3 @@
-ATLAS_URI=mongodb+srv://Chin2452:Cr_2452@dyslexia-elearn.zudcime.mongodb.net/?retryWrites=true&w=majority&appName=dyslexia-elearn
+ATLAS_URI = mongodb+srv://Chin2452:Cr_2452@dyslexia-elearn.zudcime.mongodb.net/?retryWrites=true&w=majority&appName=dyslexia-elearn
+JWT_SECRET = learn_brightly_secure_jwt_secret_key_2024_$3cur3
+PORT = 5000
