--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.11",
@@ -15,17 +16,21 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.11",
-    "@types/node": "^18.19.86",
     "bcryptjs": "^2.4.3",
+    "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.5.0",
+    "express": "^4.18.2",
     "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.17.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +41,10 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.22",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^22.15.30",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
