--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-switch": "^1.2.2",
@@ -34,6 +35,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-progress": "^0.0.12",
     "react-router-dom": "^7.5.2",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^1.14.0",
