--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.17.0",
     "os-browserify": "^0.3.0",
