--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -32,6 +32,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
