--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "server": "tsx server/index.ts",
+    "server:build": "tsc --project server/tsconfig.json",
+    "server:dev": "tsx watch server/index.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.11",
@@ -33,6 +35,7 @@
     "lucide-react": "^0.503.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.6",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
@@ -46,16 +49,18 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.22",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^22.15.30",
+    "@types/node": "^22.18.6",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.5",
     "typescript": "^5.0.2",
     "vite": "^5.0.0"
   }
