--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -27,14 +27,17 @@
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "framer-motion": "^12.18.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.16.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^7.0.6",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
