--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,42 @@
 
 npm-debug.log*
 yarn-debug.log*
+# Node
+node_modules/
+**/node_modules/
+
+# Builds
+/dist/
+**/dist/
+/build/
+**/build/
+/.vite/
+**/.vite/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# Env & secrets
+.env
+.env.*
+learn-brightly/server/config.env
+
+# Editor/OS
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# TypeScript
+*.tsbuildinfo
+
+# Misc
+coverage/
+*.local
+
 
 # IDE
 .idea/
