--- a/learn-brightly/package.json
+++ b/learn-brightly/package.json
@@ -1,70 +1,6 @@
 {
-  "name": "learn-brightly",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "tsx server/index.ts",
-    "server:build": "tsc --project server/tsconfig.json",
-    "server:dev": "tsx watch server/index.ts"
-  },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-toast": "^1.2.11",
-    "bcryptjs": "^2.4.3",
-    "browserify-fs": "^1.0.0",
-    "buffer": "^6.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^1.2.1",
-    "cors": "^2.8.5",
-    "crypto-browserify": "^3.12.1",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "framer-motion": "^12.18.1",
-    "gridfs-stream": "^1.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.503.0",
-    "mongodb": "^6.20.0",
-    "mongoose": "^8.18.1",
-    "multer": "^2.0.2",
-    "multer-gridfs-storage": "^5.0.2",
-    "nodemailer": "^7.0.6",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-progress": "^0.0.12",
-    "react-router-dom": "^7.5.2",
-    "stream-browserify": "^3.0.0",
-    "tailwind-merge": "^1.14.0",
-    "util": "^0.12.5"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^22.18.6",
-    "@types/nodemailer": "^7.0.1",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0"
+    "@types/node": "^18.19.86"
   }
 }
