--- a/learn-brightly/learn-brightly/package.json
+++ b/learn-brightly/learn-brightly/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.11",
+    "@supabase/supabase-js": "^2.78.0",
     "bcryptjs": "^2.4.3",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
