--- a/learn-brightly/learn-brightly/.gitignore
+++ b/learn-brightly/learn-brightly/.gitignore
@@ -24,3 +24,19 @@ dist-ssr
 *.sw?
 *.env
 
+# Node modules
+node_modules/
+
+# Environment files
+.env
+quiz-ai/.env
+
+# Python virtual environment (nested)
+quiz-ai/venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Logs
+*.log
